update fix bug